# 2p5d_Path_Planning_with_ML

./: .gitignore  4_24_chat_history.md  README.md  东北大学自动化强基班《人工智能》与《机器学习与模式识别》综合课程作业布置说明.md  原版完整方案.md  面向不同车型的2.5D野外地形风险感知路径规划：机器学习与搜索算法双向嵌套完整方案.md
ml25d_ws/src/ml25d_dataset_generation/: CMakeLists.txt  README.md  package.xml
ml25d_ws/src/ml25d_dataset_generation/config/: action_primitives.yaml  dataset_config.yaml  friction_table.yaml  label_thresholds.yaml  terrain_distribution.yaml
ml25d_ws/src/ml25d_dataset_generation/data/generated_smoke_srcfix_v1/: dataset_manifest.json  samples_batch_0001.h5
ml25d_ws/src/ml25d_dataset_generation/data/generated_smoke_srcfix_v2/: dataset_manifest.json  samples_batch_0001.h5
ml25d_ws/src/ml25d_dataset_generation/data/generated_smoke_srcfix_v5/: dataset_manifest.json  samples_batch_0001.h5
ml25d_ws/src/ml25d_dataset_generation/data/generated_smoke_srcfix_v6/: dataset_manifest.json  samples_batch_0001.h5
ml25d_ws/src/ml25d_dataset_generation/data/generated_smoke_srcfix_v7/: dataset_manifest.json  samples_batch_0001.h5
ml25d_ws/src/ml25d_dataset_generation/data/generated_srcfix_diag_v8/: dataset_manifest.json  samples_batch_0001.h5
ml25d_ws/src/ml25d_dataset_generation/data/generated_srcfix_diag_v9/: dataset_manifest.json  samples_batch_0001.h5  stats_report.json  validation_report.json
ml25d_ws/src/ml25d_dataset_generation/docs/: dataset_schema.md  ros_gz_dataset_generation.md
ml25d_ws/src/ml25d_dataset_generation/launch/: dataset_gen_pipeline.launch.py  gazebo_headless.launch.py
ml25d_ws/src/ml25d_dataset_generation/python/ml25d_dataset_generation/: __init__.py  common_types.py  config_loader.py  dataset_manager.py  feature_builder.py  gazebo_runner.py  label_extractor.py  map_builder_from_h5.py  planning_types.py  pso_training.py  (+7 more)
ml25d_ws/src/ml25d_dataset_generation/resource/: ml25d_dataset_generation
ml25d_ws/src/ml25d_dataset_generation/scripts/: ablate_guard_vs_model.py  add_guard_only_custom.py  analyze_failure_modes.py  audit_dataset.py  bottom_audit.py  build_course_report_tables.py  calibrate_risk_model.py  calibrate_trained_thresholds.py  demo_pick_sample.py  demo_ros_gz.py  demo_screenshot.py  flat_action_audit.py  flat_only_sanity.py  flat_root_cause_diagnostic.py  generate_dataset.py  generate_dataset_shards.py  generate_pilot_parallel.py  mini_batch_repro_check.py  pilot_dataset_report.py  preformal_audits.py  render_planning_figures.py  render_proposed_only_figures.py  run_custom_scattered_benchmark.py  run_planning_benchmark.py  slope20_stability_audit.py  smoke_ros_gz.py  stats_report.py  step_audit.py  terrain_gate_audit.py  terrain_ladder_diagnostic.py  train_risk_model.py  urban_small_flat_audit.py  validate_samples.py  workers_scaling_test.py
ml25d_ws/src/ml25d_dataset_generation/test/: test_gazebo_runner.py  test_label_extractor.py  test_planning_pipeline.py  test_terrain_generator.py  test_training_pipeline.py
ml25d_ws/src/ml25d_dataset_generation/worlds/: ml25d_demo.sdf  ml25d_empty.sdf
(+1127 files in other folders)
